fix: increase padding-bottom in body for improved spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1363,7 +1363,7 @@ body {
     gap: 12px;
     justify-content: center;
     align-items: center;
-    padding-bottom: 8px;
+    padding-bottom: 30px;
   }
 
   .social-links_img_footer {
